# cargo

./: MANIFEST.in  README.md  pyproject.toml  setup.py
cargo_flow/: __init__.py  hooks.py
cargo_flow/cargo_flow/dashboard_chart/vehicle_status_distribution/: vehicle_status_distribution.json
cargo_flow/cargo_flow/doctype/driver/: driver.js  driver.json
cargo_flow/cargo_flow/doctype/trip/: trip.js  trip.py
cargo_flow/cargo_flow/doctype/vehicle/: vehicle.js  vehicle.py
cargo_flow/cargo_flow/doctype/waybill/: waybill.js  waybill.json
cargo_flow/cargo_flow/print_format/waybill_print_format/: waybill_print_format.json
cargo_flow/cargo_flow/report/fleet_utilization/: fleet_utilization.py
cargo_flow/cargo_flow/workspace/cargo_flow_dashboard/: cargo_flow_dashboard.json
cargo_flow/dashboard_chart/trip_status_distribution/: trip_status_distribution.json
cargo_flow/doctype/driver/: driver.py
cargo_flow/doctype/trip/: trip.json
cargo_flow/doctype/trip_waybill/: trip_waybill.json
cargo_flow/doctype/vehicle/: vehicle.json  vehicle.py
cargo_flow/doctype/waybill/: waybill.py
cargo_flow/module_def/cargo_flow/: cargo_flow.json
cargo_flow/notification/trip_delay_alert/: trip_delay_alert.json
cargo_flow/print_format/waybill_print_format/: waybill_print_format.html
cargo_flow/public/js/: delivery_note_ui.js
cargo_flow/report/fleet_utilization/: fleet_utilization.js  fleet_utilization.json
